# LibUSB_CMake_Version

./: CMakeLists.txt
os/linux/: config.h
test/: CMakeLists.txt  testlibusb.c
